--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
                 <!-- Standard Room -->
                 <div class="bg-white rounded-xl shadow-xl overflow-hidden transform hover:scale-105 hover:shadow-2xl transition-all duration-500 group">
-                    <img src="https://images.unsplash.com/photo-1578683014728-c73504a01586?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Standard Room" class="w-full h-64 object-cover group-hover:brightness-110 transition-all duration-300">
+                    <img src="img/Standard Room download.jpg" alt="Standard Room" class="w-full h-64 object-cover group-hover:brightness-110 transition-all duration-300">
                     <div class="p-6 bg-gradient-to-b from-green-50 to-red-50">
                         <h3 class="text-2xl font-semibold text-gray-800 mb-2">Standard Room</h3>
                         <p class="text-gray-600 mb-4">Cozy retreat with essential amenities and cultural touches.</p>
@@ -105,7 +105,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
                 <!-- Biryani -->
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden transform hover:scale-105 hover:shadow-xl transition-all duration-500 group">
-                    <img src="https://images.unsplash.com/photo-1621996346565-e3dbc353d2e5?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Biryani" class="w-full h-48 object-cover group-hover:brightness-110 transition-all duration-300">
+                    <img src="img/BIRANI download.jpg" alt="Biryani" class="w-full h-48 object-cover group-hover:brightness-110 transition-all duration-300">
                     <div class="p-4">
                         <h3 class="text-xl font-semibold text-gray-800 mb-2">Chicken Biryani</h3>
                         <p class="text-gray-600 mb-3">Aromatic rice dish infused with spices and tender chicken.</p>
@@ -117,7 +117,7 @@
                 </div>
                 <!-- Fish Curry -->
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden transform hover:scale-105 hover:shadow-xl transition-all duration-500 group">
-                    <img src="https://images.unsplash.com/photo-1579586144127-3a1c0f1e91ba?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Fish Curry" class="w-full h-48 object-cover group-hover:brightness-110 transition-all duration-300">
+                    <img src="img/Rui Mach Bhuna download.jpg" alt="Fish Curry" class="w-full h-48 object-cover group-hover:brightness-110 transition-all duration-300">
                     <div class="p-4">
                         <h3 class="text-xl font-semibold text-gray-800 mb-2">Rui Mach Bhuna</h3>
                         <p class="text-gray-600 mb-3">Spicy roasted fish curry with fresh Rohu, a Bangladeshi favorite.</p>
@@ -129,7 +129,7 @@
                 </div>
                 <!-- Beef Bhuna -->
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden transform hover:scale-105 hover:shadow-xl transition-all duration-500 group">
-                    <img src="https://images.unsplash.com/photo-1635934023287-2c0d0c4a9d4e?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Beef Bhuna" class="w-full h-48 object-cover group-hover:brightness-110 transition-all duration-300">
+                    <img src="img/Beef Bhuna download.jpg" alt="Beef Bhuna" class="w-full h-48 object-cover group-hover:brightness-110 transition-all duration-300">
                     <div class="p-4">
                         <h3 class="text-xl font-semibold text-gray-800 mb-2">Beef Bhuna</h3>
                         <p class="text-gray-600 mb-3">Slow-cooked beef in rich spices, served with naan.</p>
